fixed labels to use bootstrap alignment class

--- a/mod3_solution/css/style.css
+++ b/mod3_solution/css/style.css
@@ -53,7 +53,6 @@ h1 {
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.5em;
     font-weight: bold;
-    text-align: center;
 }
 #nav-list a:hover {
     background-color: grey;
